[workspace]
members = [ "file-sync",
    "shard-distribution",
]

resolver = "2"

[workspace.package]
edition = "2021"
description = "A library for sharding distribution of file chunks"
license = "MIT OR Apache-2.0"
repository = "https://github.com/radumarias/rfs"
readme = "README.md"
authors = ["Radu Marias <radumarias@gmail.com>, Bnchi Fahmi <bnchifahmi@gmail.com>"]
keywords = ["sharding", "files", "distribution", "consistent-hashing", "parition-by-range"]
categories = ["cryptography", "filesystem"]
exclude = [".github/"]

[workspace.dependencies]
sha2 = "0.10"
hex = "0.4.3"
criterion = "0.5.1"
rand = "0.8.5"
num-bigint = "0.4"
num-traits = "0.2"
blake3 = "1.5.3"

[profile.release]
panic = "abort"
