[package]
name = "shard-distribution"
version = "0.1.0"
edition = "2021"
description = "A library for sharding distribution of file chunks"
license = "MIT OR Apache-2.0"
repository = "https://github.com/radumarias/rfs"
readme = "README.md"
authors = ["Radu Marias <radumarias@gmail.com>, Bnchi Fahmi <bnchifahmi@gmail.com>"]
keywords = ["sharding", "files", "distribution", "consistent-hashing", "parition-by-range"]
categories = ["cryptography", "filesystem"]
exclude = [".github/"]

[dependencies]
sha2 = { workspace = true }
hex = { workspace = true }
criterion = { workspace = true }
rand = { workspace = true }
num-bigint = { workspace = true }
num-traits = { workspace = true }
blake3 = { workspace = true }

[dev-dependencies]
criterion = { version = "^0.5.1", features = ["html_reports"] }

[[bench]]
name = "consistent_hashing"
harness = false
